# floras

./: .gitignore  .readthedocs.yaml  README.md  get_spot.py  mkdocs.yml  pyproject.toml  pytest.ini
.github/workflows/: conda.yaml  main.yaml  test_conda_env.yaml  test_conda_env_macos.yaml  test_pdm_env_macos.yaml  test_pdm_env_macos_2.yaml
docs/: automata.md  contributing.md  index.md  installing.md  optimization.md  product.md  transition_system.md
envs/: conda_env.yaml
examples/: example.json  maze.txt
src/floras/: main.py
src/floras/components/: automata.py  product.py
src/floras/optimization/: optimization.py  optimize.py  setup_graphs.py
src/flowsynth/: main.py
src/flowsynth/components/: automata.py  product.py  transition_system.py  utils.py
src/flowsynth/optimization/: milp_static.py  optimization.py  optimize.py  utils.py
tests/: test_1.py  test_reactive_1.py  test_static_1.py  tests.py
