[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[project]
name = "floras"
description = "A package for network flow-based test synthesis."
authors = [
    {name = "floras developers", email = "tbd"},
]
license = {text = "BSD-3-Clause"}
classifiers = [
    "Topic :: Scientific/Engineering"
]
keywords = ["test synthesis"]

dependencies = [
    "numpy>=1.24.1",
    "gurobipy==11.0.3",
    "imageio>=2.19.3",
    "ipdb>=0.13.11",
    "matplotlib>=3.9.2",
    "networkx>=3.0",
    "scipy>=1.10.1",
    "tulip==1.4.0",
    "pytest>=8.3.3",
    "coverage>=7.6.1",
    "pygraphviz>=1.13",
    "mkdocs>=1.6.1",
    "mkdocs-material>=9.5.34",
    "mkdocstrings-python>=1.11.1"
]
requires-python = ">=3.10"
version = "0.0.0"
readme = "README.md"

[project.scripts]
from_json = "floras.main:main"

[tool.pdm]
